woe, java 8 be upon me