@@ -1,5 +1,6 @@
 package io.github.cichlidmc.cichlid.impl.loadable.mod;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -10,8 +11,14 @@ import com.google.gson.JsonSyntaxException;
 import io.github.cichlidmc.cichlid.api.Entrypoints;
 import io.github.cichlidmc.cichlid.impl.util.JsonUtils;
 
-public record EntrypointsImpl(Map<String, List<String>> map) implements Entrypoints {
-	public static final Entrypoints EMPTY = new EntrypointsImpl(Map.of());
+public class EntrypointsImpl implements Entrypoints {
+	public static final Entrypoints EMPTY = new EntrypointsImpl(Collections.emptyMap());
+
+	private final Map<String, List<String>> map;
+
+	public EntrypointsImpl(Map<String, List<String>> map) {
+		this.map = map;
+	}
 
 	@Override
 	public List<String> get(String key) {
@@ -27,9 +34,10 @@ public record EntrypointsImpl(Map<String, List<String>> map) implements Entrypoi
 		if (element == null)
 			return EMPTY;
 
-		if (!(element instanceof JsonObject json))
+		if (!(element instanceof JsonObject))
 			throw new JsonSyntaxException("Not an object: " + element);
 
+		JsonObject json = element.getAsJsonObject();
 		Map<String, List<String>> map = new HashMap<>();
 		json.keySet().forEach(key -> map.put(key, JsonUtils.getStringList(json, key)));
 		return new EntrypointsImpl(map);
