@@ -1,6 +1,8 @@
 package io.github.cichlidmc.cichlid.impl.util;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -10,9 +12,9 @@ import com.google.gson.JsonSyntaxException;
 
 public class JsonUtils {
 	public static String assertString(JsonElement element) throws JsonSyntaxException {
-		if (!(element instanceof JsonPrimitive primitive) || !primitive.isString())
+		if (!(element instanceof JsonPrimitive) || !element.getAsJsonPrimitive().isString())
 			throw new JsonSyntaxException("Not a string: " + element);
-		return primitive.getAsString();
+		return element.getAsJsonPrimitive().getAsString();
 	}
 
 	public static String getString(JsonObject json, String key) throws JsonSyntaxException {
@@ -22,13 +24,15 @@ public class JsonUtils {
 	public static List<String> getStringList(JsonObject json, String key) throws JsonSyntaxException {
 		try {
 			// convert single string to list
-			return List.of(getString(json, key));
+			return Collections.singletonList(getString(json, key));
 		} catch (JsonSyntaxException ignored) {}
 
 		JsonElement element = json.get(key);
-		if (!(element instanceof JsonArray array))
+		if (!(element instanceof JsonArray))
 			throw new JsonSyntaxException("Not a list: " + key);
 
-		return array.asList().stream().map(JsonUtils::assertString).toList();
+		return element.getAsJsonArray().asList().stream()
+				.map(JsonUtils::assertString)
+				.collect(Collectors.toList());
 	}
 }
